--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "dcat/easy-excel": "^1.0",
         "dcat/laravel-admin": "^1.4",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
