--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
-        "overtrue/laravel-wechat": "~5.0"
+        "overtrue/laravel-wechat": "~5.0",
+        "tymon/jwt-auth": "1.0.0-rc.5"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
